@@ -256,6 +256,8 @@ Optimizations
 Bug Fixes
 ----------------------
 
+* SOLR-3068: Occasional NPE in ThreadDumpHandler (siren)
+
 * SOLR-2762: FSTLookup could return duplicate results or one results less
   than requested. (David Smiley, Dawid Weiss)
 
